// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getComponentCss() should return correct css for aspectRatio: "1:1", weight: "regular", linkDirection: "column" and hasDescription: false 1`] = `
":host {
  display: flex;
  align-items: stretch;
  hyphens: auto;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot:not([name]) {
  display: block;
  width: 100%;
  height: 100%;
  transition: transform var(--p-transition-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
}
slot[name=primary] {
  pointer-events: auto;
}
slot[name=secondary] {
  pointer-events: auto;
}
::slotted(:is(img,picture,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
}
::slotted(:is(img,video)) {
  object-fit: cover !important;
}
a {
  grid-area: 1/1/-1 /-1;
  z-index: 4;
  outline: 0;
}
h1,h2,h3,h4,h5,h6 {
  margin: 0;
  z-index: 3;
  max-width: 34.375rem;
  font: normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  color: #FBFCFF;
  font-weight: 400;
}
@supports (-webkit-hyphens: auto) {
  :host {
    align-items: baseline;
  }
}

.root {
  aspect-ratio: 1/1;
  width: 100%;
  display: grid;
  grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0px, 1fr) auto clamp(16px, 1.25vw + 12px, 36px)/clamp(16px, 1.25vw + 12px, 36px) minmax(0px, 1fr) clamp(16px, 1.25vw + 12px, 36px);
}
.root::after {
  content: "";
  z-index: 2;
  grid-area: 4/1/6/-1;
  background: linear-gradient(to top, hsla(0, 0%, 0%, 0.80) 0%,hsla(0, 0%, 0%, 0.80) 8.1%,hsla(0, 0%, 0%, 0.80) 15.5%,hsla(0, 0%, 0%, 0.80) 22.5%,hsla(0, 0%, 0%, 0.78) 29%,hsla(0, 0%, 0%, 0.73) 35.3%,hsla(0, 0%, 0%, 0.67) 41.2%,hsla(0, 0%, 0%, 0.60) 47.1%,hsla(0, 0%, 0%, 0.52) 52.9%,hsla(0, 0%, 0%, 0.44) 58.8%,hsla(0, 0%, 0%, 0.33) 64.7%,hsla(0, 0%, 0%, 0.22) 71%,hsla(0, 0%, 0%, 0.12) 77.5%,hsla(0, 0%, 0%, 0.05) 84.5%,hsla(0, 0%, 0%, 0.011) 91.9%,hsla(0, 0%, 0%, 0) 100%);;
  margin-top: calc(clamp(32px, 2.75vw + 23px, 76px) * -1);
  border-end-start-radius: 12px;
  border-end-end-radius: 12px;
}
.header {
  grid-area: 2/2;
  z-index: 3;
  display: flex;
  flex-direction: column;
  gap: clamp(8px, 0.5vw + 6px, 16px);
}
.media {
  position: relative;
  grid-area: 1/1/-1 /-1;
  z-index: 1;
  overflow: hidden;
  border-radius: 12px;
}
.footer {
  grid-area: 4/2;
  display: flex;
  gap: 16px;
  justify-content: space-between;
  align-items: flex-start;
  flex-direction: column;
}
.link-group {
  z-index: 5;
  display: flex;
  width: 100%;
  pointer-events: none;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  flex-flow: column nowrap;
  align-items: stretch;
}
@media (forced-colors: active) {
  .root::after {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover slot:not([name]) {
    transform: scale3d(1.05,1.05,1.05);
  }
}

@supports (-webkit-hyphens: auto) {
  .root {
    height: 100%;
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: "3:4", weight: "semi-bold", linkDirection: "row" and hasDescription: true 1`] = `
":host {
  display: flex;
  align-items: stretch;
  hyphens: auto;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot:not([name]) {
  display: block;
  width: 100%;
  height: 100%;
  transition: transform var(--p-transition-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
}
slot[name=primary] {
  pointer-events: auto;
}
slot[name=secondary] {
  pointer-events: auto;
}
::slotted(:is(img,picture,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
}
::slotted(:is(img,video)) {
  object-fit: cover !important;
}
a {
  grid-area: 1/1/-1 /-1;
  z-index: 4;
  outline: 0;
}
h1,h2,h3,h4,h5,h6 {
  margin: 0;
  z-index: 3;
  max-width: 34.375rem;
  font: normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  color: #FBFCFF;
  font-weight: 600;
}
p {
  margin: -12px 0 0 ;
  z-index: 3;
  max-width: 34.375rem;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  color: #FBFCFF;
}
@supports (-webkit-hyphens: auto) {
  :host {
    align-items: baseline;
  }
}

.root {
  aspect-ratio: 3/4;
  width: 100%;
  display: grid;
  grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0px, 1fr) auto clamp(16px, 1.25vw + 12px, 36px)/clamp(16px, 1.25vw + 12px, 36px) minmax(0px, 1fr) clamp(16px, 1.25vw + 12px, 36px);
}
.root::after {
  content: "";
  z-index: 2;
  grid-area: 4/1/6/-1;
  background: linear-gradient(to top, hsla(0, 0%, 0%, 0.80) 0%,hsla(0, 0%, 0%, 0.80) 8.1%,hsla(0, 0%, 0%, 0.80) 15.5%,hsla(0, 0%, 0%, 0.80) 22.5%,hsla(0, 0%, 0%, 0.78) 29%,hsla(0, 0%, 0%, 0.73) 35.3%,hsla(0, 0%, 0%, 0.67) 41.2%,hsla(0, 0%, 0%, 0.60) 47.1%,hsla(0, 0%, 0%, 0.52) 52.9%,hsla(0, 0%, 0%, 0.44) 58.8%,hsla(0, 0%, 0%, 0.33) 64.7%,hsla(0, 0%, 0%, 0.22) 71%,hsla(0, 0%, 0%, 0.12) 77.5%,hsla(0, 0%, 0%, 0.05) 84.5%,hsla(0, 0%, 0%, 0.011) 91.9%,hsla(0, 0%, 0%, 0) 100%);;
  margin-top: calc(clamp(32px, 2.75vw + 23px, 76px) * -1);
  border-end-start-radius: 12px;
  border-end-end-radius: 12px;
}
.header {
  grid-area: 2/2;
  z-index: 3;
  display: flex;
  flex-direction: column;
  gap: clamp(8px, 0.5vw + 6px, 16px);
}
.media {
  position: relative;
  grid-area: 1/1/-1 /-1;
  z-index: 1;
  overflow: hidden;
  border-radius: 12px;
}
.footer {
  grid-area: 4/2;
  display: flex;
  gap: 16px;
  justify-content: space-between;
  align-items: flex-start;
  flex-direction: column;
}
.link-group {
  z-index: 5;
  display: flex;
  width: 100%;
  pointer-events: none;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  flex-flow: row wrap;
  align-items: center;
}
@media (forced-colors: active) {
  .root::after {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover slot:not([name]) {
    transform: scale3d(1.05,1.05,1.05);
  }
}

@supports (-webkit-hyphens: auto) {
  .root {
    height: 100%;
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: "4:3", weight: "semi-bold", linkDirection: "row" and hasDescription: true 1`] = `
":host {
  display: flex;
  align-items: stretch;
  hyphens: auto;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot:not([name]) {
  display: block;
  width: 100%;
  height: 100%;
  transition: transform var(--p-transition-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
}
slot[name=primary] {
  pointer-events: auto;
}
slot[name=secondary] {
  pointer-events: auto;
}
::slotted(:is(img,picture,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
}
::slotted(:is(img,video)) {
  object-fit: cover !important;
}
a {
  grid-area: 1/1/-1 /-1;
  z-index: 4;
  outline: 0;
}
h1,h2,h3,h4,h5,h6 {
  margin: 0;
  z-index: 3;
  max-width: 34.375rem;
  font: normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  color: #FBFCFF;
  font-weight: 600;
}
p {
  margin: -12px 0 0 ;
  z-index: 3;
  max-width: 34.375rem;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  color: #FBFCFF;
}
@supports (-webkit-hyphens: auto) {
  :host {
    align-items: baseline;
  }
}

.root {
  aspect-ratio: 4/3;
  width: 100%;
  display: grid;
  grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0px, 1fr) auto clamp(16px, 1.25vw + 12px, 36px)/clamp(16px, 1.25vw + 12px, 36px) minmax(0px, 1fr) clamp(16px, 1.25vw + 12px, 36px);
}
.root::after {
  content: "";
  z-index: 2;
  grid-area: 4/1/6/-1;
  background: linear-gradient(to top, hsla(0, 0%, 0%, 0.80) 0%,hsla(0, 0%, 0%, 0.80) 8.1%,hsla(0, 0%, 0%, 0.80) 15.5%,hsla(0, 0%, 0%, 0.80) 22.5%,hsla(0, 0%, 0%, 0.78) 29%,hsla(0, 0%, 0%, 0.73) 35.3%,hsla(0, 0%, 0%, 0.67) 41.2%,hsla(0, 0%, 0%, 0.60) 47.1%,hsla(0, 0%, 0%, 0.52) 52.9%,hsla(0, 0%, 0%, 0.44) 58.8%,hsla(0, 0%, 0%, 0.33) 64.7%,hsla(0, 0%, 0%, 0.22) 71%,hsla(0, 0%, 0%, 0.12) 77.5%,hsla(0, 0%, 0%, 0.05) 84.5%,hsla(0, 0%, 0%, 0.011) 91.9%,hsla(0, 0%, 0%, 0) 100%);;
  margin-top: calc(clamp(32px, 2.75vw + 23px, 76px) * -1);
  border-end-start-radius: 12px;
  border-end-end-radius: 12px;
}
.header {
  grid-area: 2/2;
  z-index: 3;
  display: flex;
  flex-direction: column;
  gap: clamp(8px, 0.5vw + 6px, 16px);
}
.media {
  position: relative;
  grid-area: 1/1/-1 /-1;
  z-index: 1;
  overflow: hidden;
  border-radius: 12px;
}
.footer {
  grid-area: 4/2;
  display: flex;
  gap: 16px;
  justify-content: space-between;
  align-items: flex-start;
  flex-direction: column;
}
.link-group {
  z-index: 5;
  display: flex;
  width: 100%;
  pointer-events: none;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  flex-flow: row wrap;
  align-items: center;
}
@media (forced-colors: active) {
  .root::after {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover slot:not([name]) {
    transform: scale3d(1.05,1.05,1.05);
  }
}

@supports (-webkit-hyphens: auto) {
  .root {
    height: 100%;
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: "9:16", weight: "semi-bold", linkDirection: "row" and hasDescription: false 1`] = `
":host {
  display: flex;
  align-items: stretch;
  hyphens: auto;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot:not([name]) {
  display: block;
  width: 100%;
  height: 100%;
  transition: transform var(--p-transition-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
}
slot[name=primary] {
  pointer-events: auto;
}
slot[name=secondary] {
  pointer-events: auto;
}
::slotted(:is(img,picture,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
}
::slotted(:is(img,video)) {
  object-fit: cover !important;
}
a {
  grid-area: 1/1/-1 /-1;
  z-index: 4;
  outline: 0;
}
h1,h2,h3,h4,h5,h6 {
  margin: 0;
  z-index: 3;
  max-width: 34.375rem;
  font: normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  color: #FBFCFF;
  font-weight: 600;
}
@supports (-webkit-hyphens: auto) {
  :host {
    align-items: baseline;
  }
}

.root {
  aspect-ratio: 9/16;
  width: 100%;
  display: grid;
  grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0px, 1fr) auto clamp(16px, 1.25vw + 12px, 36px)/clamp(16px, 1.25vw + 12px, 36px) minmax(0px, 1fr) clamp(16px, 1.25vw + 12px, 36px);
}
.root::after {
  content: "";
  z-index: 2;
  grid-area: 4/1/6/-1;
  background: linear-gradient(to top, hsla(0, 0%, 0%, 0.80) 0%,hsla(0, 0%, 0%, 0.80) 8.1%,hsla(0, 0%, 0%, 0.80) 15.5%,hsla(0, 0%, 0%, 0.80) 22.5%,hsla(0, 0%, 0%, 0.78) 29%,hsla(0, 0%, 0%, 0.73) 35.3%,hsla(0, 0%, 0%, 0.67) 41.2%,hsla(0, 0%, 0%, 0.60) 47.1%,hsla(0, 0%, 0%, 0.52) 52.9%,hsla(0, 0%, 0%, 0.44) 58.8%,hsla(0, 0%, 0%, 0.33) 64.7%,hsla(0, 0%, 0%, 0.22) 71%,hsla(0, 0%, 0%, 0.12) 77.5%,hsla(0, 0%, 0%, 0.05) 84.5%,hsla(0, 0%, 0%, 0.011) 91.9%,hsla(0, 0%, 0%, 0) 100%);;
  margin-top: calc(clamp(32px, 2.75vw + 23px, 76px) * -1);
  border-end-start-radius: 12px;
  border-end-end-radius: 12px;
}
.header {
  grid-area: 2/2;
  z-index: 3;
  display: flex;
  flex-direction: column;
  gap: clamp(8px, 0.5vw + 6px, 16px);
}
.media {
  position: relative;
  grid-area: 1/1/-1 /-1;
  z-index: 1;
  overflow: hidden;
  border-radius: 12px;
}
.footer {
  grid-area: 4/2;
  display: flex;
  gap: 16px;
  justify-content: space-between;
  align-items: flex-start;
  flex-direction: column;
}
.link-group {
  z-index: 5;
  display: flex;
  width: 100%;
  pointer-events: none;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  flex-flow: row wrap;
  align-items: center;
}
@media (forced-colors: active) {
  .root::after {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover slot:not([name]) {
    transform: scale3d(1.05,1.05,1.05);
  }
}

@supports (-webkit-hyphens: auto) {
  .root {
    height: 100%;
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: "16:9", weight: "regular", linkDirection: "column" and hasDescription: true 1`] = `
":host {
  display: flex;
  align-items: stretch;
  hyphens: auto;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot:not([name]) {
  display: block;
  width: 100%;
  height: 100%;
  transition: transform var(--p-transition-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
}
slot[name=primary] {
  pointer-events: auto;
}
slot[name=secondary] {
  pointer-events: auto;
}
::slotted(:is(img,picture,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
}
::slotted(:is(img,video)) {
  object-fit: cover !important;
}
a {
  grid-area: 1/1/-1 /-1;
  z-index: 4;
  outline: 0;
}
h1,h2,h3,h4,h5,h6 {
  margin: 0;
  z-index: 3;
  max-width: 34.375rem;
  font: normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  color: #FBFCFF;
  font-weight: 400;
}
p {
  margin: -12px 0 0 ;
  z-index: 3;
  max-width: 34.375rem;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  color: #FBFCFF;
}
@supports (-webkit-hyphens: auto) {
  :host {
    align-items: baseline;
  }
}

.root {
  aspect-ratio: 16/9;
  width: 100%;
  display: grid;
  grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0px, 1fr) auto clamp(16px, 1.25vw + 12px, 36px)/clamp(16px, 1.25vw + 12px, 36px) minmax(0px, 1fr) clamp(16px, 1.25vw + 12px, 36px);
}
.root::after {
  content: "";
  z-index: 2;
  grid-area: 4/1/6/-1;
  background: linear-gradient(to top, hsla(0, 0%, 0%, 0.80) 0%,hsla(0, 0%, 0%, 0.80) 8.1%,hsla(0, 0%, 0%, 0.80) 15.5%,hsla(0, 0%, 0%, 0.80) 22.5%,hsla(0, 0%, 0%, 0.78) 29%,hsla(0, 0%, 0%, 0.73) 35.3%,hsla(0, 0%, 0%, 0.67) 41.2%,hsla(0, 0%, 0%, 0.60) 47.1%,hsla(0, 0%, 0%, 0.52) 52.9%,hsla(0, 0%, 0%, 0.44) 58.8%,hsla(0, 0%, 0%, 0.33) 64.7%,hsla(0, 0%, 0%, 0.22) 71%,hsla(0, 0%, 0%, 0.12) 77.5%,hsla(0, 0%, 0%, 0.05) 84.5%,hsla(0, 0%, 0%, 0.011) 91.9%,hsla(0, 0%, 0%, 0) 100%);;
  margin-top: calc(clamp(32px, 2.75vw + 23px, 76px) * -1);
  border-end-start-radius: 12px;
  border-end-end-radius: 12px;
}
.header {
  grid-area: 2/2;
  z-index: 3;
  display: flex;
  flex-direction: column;
  gap: clamp(8px, 0.5vw + 6px, 16px);
}
.media {
  position: relative;
  grid-area: 1/1/-1 /-1;
  z-index: 1;
  overflow: hidden;
  border-radius: 12px;
}
.footer {
  grid-area: 4/2;
  display: flex;
  gap: 16px;
  justify-content: space-between;
  align-items: flex-start;
  flex-direction: column;
}
.link-group {
  z-index: 5;
  display: flex;
  width: 100%;
  pointer-events: none;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  flex-flow: column nowrap;
  align-items: stretch;
}
@media (forced-colors: active) {
  .root::after {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover slot:not([name]) {
    transform: scale3d(1.05,1.05,1.05);
  }
}

@supports (-webkit-hyphens: auto) {
  .root {
    height: 100%;
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: {"base":"1:1","xs":"4:3","s":"3:4","m":"16:9","l":"9:16","xl":"1:1"}, weight: {"base":"semi-bold","xs":"regular","s":"semi-bold","m":"regular","l":"semi-bold","xl":"regular"}, linkDirection: {"base":"column","xs":"row","s":"column","m":"row","l":"column","xl":"row"} and hasDescription: true 1`] = `
":host {
  display: flex;
  align-items: stretch;
  hyphens: auto;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot:not([name]) {
  display: block;
  width: 100%;
  height: 100%;
  transition: transform var(--p-transition-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
}
slot[name=primary] {
  pointer-events: auto;
}
slot[name=secondary] {
  pointer-events: auto;
}
::slotted(:is(img,picture,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
}
::slotted(:is(img,video)) {
  object-fit: cover !important;
}
a {
  grid-area: 1/1/-1 /-1;
  z-index: 4;
  outline: 0;
}
h1,h2,h3,h4,h5,h6 {
  margin: 0;
  z-index: 3;
  max-width: 34.375rem;
  font: normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  color: #FBFCFF;
  font-weight: 600;
}
p {
  margin: -12px 0 0 ;
  z-index: 3;
  max-width: 34.375rem;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  color: #FBFCFF;
}
@media(min-width:480px) {
  h1,h2,h3,h4,h5,h6 {
    font-weight: 400;
  }
}

@media(min-width:760px) {
  h1,h2,h3,h4,h5,h6 {
    font-weight: 600;
  }
}

@media(min-width:1000px) {
  h1,h2,h3,h4,h5,h6 {
    font-weight: 400;
  }
}

@media(min-width:1300px) {
  h1,h2,h3,h4,h5,h6 {
    font-weight: 600;
  }
}

@media(min-width:1760px) {
  h1,h2,h3,h4,h5,h6 {
    font-weight: 400;
  }
}

@supports (-webkit-hyphens: auto) {
  :host {
    align-items: baseline;
  }
}

.root {
  aspect-ratio: 1/1;
  width: 100%;
  display: grid;
  grid-template: clamp(16px, 1.25vw + 12px, 36px) auto minmax(0px, 1fr) auto clamp(16px, 1.25vw + 12px, 36px)/clamp(16px, 1.25vw + 12px, 36px) minmax(0px, 1fr) clamp(16px, 1.25vw + 12px, 36px);
}
.root::after {
  content: "";
  z-index: 2;
  grid-area: 4/1/6/-1;
  background: linear-gradient(to top, hsla(0, 0%, 0%, 0.80) 0%,hsla(0, 0%, 0%, 0.80) 8.1%,hsla(0, 0%, 0%, 0.80) 15.5%,hsla(0, 0%, 0%, 0.80) 22.5%,hsla(0, 0%, 0%, 0.78) 29%,hsla(0, 0%, 0%, 0.73) 35.3%,hsla(0, 0%, 0%, 0.67) 41.2%,hsla(0, 0%, 0%, 0.60) 47.1%,hsla(0, 0%, 0%, 0.52) 52.9%,hsla(0, 0%, 0%, 0.44) 58.8%,hsla(0, 0%, 0%, 0.33) 64.7%,hsla(0, 0%, 0%, 0.22) 71%,hsla(0, 0%, 0%, 0.12) 77.5%,hsla(0, 0%, 0%, 0.05) 84.5%,hsla(0, 0%, 0%, 0.011) 91.9%,hsla(0, 0%, 0%, 0) 100%);;
  margin-top: calc(clamp(32px, 2.75vw + 23px, 76px) * -1);
  border-end-start-radius: 12px;
  border-end-end-radius: 12px;
}
.header {
  grid-area: 2/2;
  z-index: 3;
  display: flex;
  flex-direction: column;
  gap: clamp(8px, 0.5vw + 6px, 16px);
}
.media {
  position: relative;
  grid-area: 1/1/-1 /-1;
  z-index: 1;
  overflow: hidden;
  border-radius: 12px;
}
.footer {
  grid-area: 4/2;
  display: flex;
  gap: 16px;
  justify-content: space-between;
  align-items: flex-start;
  flex-direction: column;
}
.link-group {
  z-index: 5;
  display: flex;
  width: 100%;
  pointer-events: none;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  flex-flow: column nowrap;
  align-items: stretch;
}
@media(min-width:480px) {
  .root {
    aspect-ratio: 4/3;
  }
  .link-group {
    flex-flow: row wrap;
    align-items: center;
  }
}

@media(min-width:760px) {
  .root {
    aspect-ratio: 3/4;
  }
  .link-group {
    flex-flow: column nowrap;
    align-items: stretch;
  }
}

@media(min-width:1000px) {
  .root {
    aspect-ratio: 16/9;
  }
  .link-group {
    flex-flow: row wrap;
    align-items: center;
  }
}

@media(min-width:1300px) {
  .root {
    aspect-ratio: 9/16;
  }
  .link-group {
    flex-flow: column nowrap;
    align-items: stretch;
  }
}

@media(min-width:1760px) {
  .root {
    aspect-ratio: 1/1;
  }
  .link-group {
    flex-flow: row wrap;
    align-items: center;
  }
}

@media (forced-colors: active) {
  .root::after {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover slot:not([name]) {
    transform: scale3d(1.05,1.05,1.05);
  }
}

@supports (-webkit-hyphens: auto) {
  .root {
    height: 100%;
  }
}
"
`;
